--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "babel-preset-es2017": "^6.24.1",
     "codecov": "^1.0.1",
     "nodemon": "^1.12.1",
-    "nyc": "^11.1.0"
+    "nyc": "^11.1.0",
+    "sinon": "^6.1.3",
+    "supertest": "^3.1.0"
   }
 }
